--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(
     main.cpp
     cppreference.cpp
     dr-811.cpp
+    empty_base_get.cpp
     piecewise_no_copy_move.cpp
     reference_wrapper.cpp
     tricky_comparisons.cpp
