--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,5 @@
 language: cpp
 
-sudo: false
-
-compiler:
-  - clang
-  - gcc
-
-env:
-  - BUILD_TYPE=Debug    VALGRIND=true   SANITIZE='' 
-  - BUILD_TYPE=Debug    VALGRIND=false  SANITIZE=undefined 
-#  - BUILD_TYPE=Debug    VALGRIND=false  SANITIZE=address 
-  - BUILD_TYPE=Release  VALGRIND=false  SANITIZE=''
-
 addons:
   apt:
     sources:
@@ -20,20 +8,79 @@ addons:
     packages:
       - clang-5.0
       - g++-7
+      - lcov
       - valgrind
+
+cache:
+  ccache: true
+
+matrix:
+  include:
+
+    # Linux clang
+    - os: linux
+      sudo: required
+      env: BUILD_TYPE=Debug SANITIZE=undefined CMAKE_GENERATOR="Unix Makefiles"
+      compiler: clang
+
+    - os: linux
+      sudo: required
+      env: BUILD_TYPE=Debug SANITIZE=address CMAKE_GENERATOR="Unix Makefiles"
+      compiler: clang
+
+    - os: linux
+      sudo: required
+      env: BUILD_TYPE=Release CMAKE_GENERATOR="Unix Makefiles"
+      compiler: clang
+
+    # Linux gcc
+    - os: linux
+      sudo: false
+      env: BUILD_TYPE=Debug SANITIZE=undefined CMAKE_GENERATOR="Unix Makefiles"
+      compiler: gcc
+
+    - os: linux
+      sudo: required
+      env: BUILD_TYPE=Debug SANITIZE=address CMAKE_GENERATOR="Unix Makefiles"
+      compiler: gcc
+
+    - os: linux
+      sudo: false
+      env: BUILD_TYPE=Release CMAKE_GENERATOR="Unix Makefiles"
+      compiler: gcc
+
+    # OSX clang
+    - os: osx
+      osx_image: xcode10
+      env: BUILD_TYPE=Debug CMAKE_GENERATOR="Xcode"
+      compiler: clang
+
+    - os: osx
+      osx_image: xcode10
+      env: BUILD_TYPE=Release CMAKE_GENERATOR="Xcode"
+      compiler: clang
 
 install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-7"; fi
   - if [ "$CXX" = "clang++" ]; then export CXX="clang++-5.0"; fi
 
-script: 
+script:
+  - cmake -H. -Bbuild
+          -DCMAKE_CONFIGURATION_TYPES="${BUILD_TYPE}"
+          -DCMAKE_BUILD_TYPE="${BUILD_TYPE}"
+          -DSANITIZE="${SANITIZE}"
+          -G"${CMAKE_GENERATOR}"
+  - if [[ $TRAVIS_OS_NAME = "osx" ]]; then
+        cmake --build build --config ${BUILD_TYPE} -- -jobs 2;
+    else
+        cmake --build build --config ${BUILD_TYPE} -- -j2;
+    fi
+  - cd build
+  - travis_wait ctest -C ${BUILD_TYPE} --output-on-failure -j 4
+
   - cmake -DCMAKE_BUILD_TYPE="${BUILD_TYPE}" -DSANITIZE="${SANITIZE}" .
   - make
-  - if [ "${VALGRIND}" = "true" ]; then
-      valgrind --leak-check=full --track-origins=yes --error-exitcode=1 tests/tight-pair-testsuite;
-    else
-      tests/tight-pair-testsuite;
-    fi
+  - tests/tight-pair-testsuite
 
 notifications:
   email: false
