--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,14 @@
-# Include Catch for the tests
-include_directories(${CATCH_INCLUDE_DIR})
+include(DownloadProject)
+
+# Download and configure Catch2 for the tests
+download_project(PROJ Catch2
+                 GIT_REPOSITORY https://github.com/catchorg/Catch2
+                 GIT_TAG master
+                 UPDATE_DISCONNECTED 1
+)
+add_subdirectory(${Catch2_SOURCE_DIR} ${Catch2_BINARY_DIR})
+list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/contrib)
+include(Catch)
 
 # Define test files
 
@@ -40,7 +49,7 @@ set(
 
 # Make one executable for the whole testsuite
 add_executable(
-    tight-pair-testsuite
+    tight_pair-testsuite
 
     main.cpp
     cppreference.cpp
@@ -52,7 +61,28 @@ add_executable(
     ${LIBCXX_TESTS}
 )
 
-add_test(testsuite tight-pair-testsuite)
+target_link_libraries(tight_pair-testsuite
+    PRIVATE
+        Catch2::Catch2
+        tight_pair::tight_pair
+)
 
-# Enable unit-testing
-enable_testing(true)
+# Somewhat speed up Catch2 compile times
+target_compile_definitions(tight_pair-testsuite PRIVATE CATCH_CONFIG_FAST_COMPILE)
+target_compile_definitions(tight_pair-testsuite PRIVATE CATCH_CONFIG_DISABLE_MATCHERS)
+
+# Use the gold linker if possible
+if (UNIX AND NOT APPLE)
+    set_property(TARGET tight_pair-testsuite APPEND_STRING PROPERTY LINK_FLAGS " -fuse-ld=gold")
+endif()
+
+# Optionally enable sanitizers
+if (UNIX AND SANITIZE)
+	target_compile_options(tight_pair-testsuite PRIVATE -fsanitize=${SANITIZE})
+	set_property(TARGET tight_pair-testsuite APPEND_STRING PROPERTY LINK_FLAGS " -fsanitize=${SANITIZE}")
+endif()
+
+include(CTest)
+
+string(RANDOM LENGTH 5 ALPHABET 0123456789 RNG_SEED)
+catch_discover_tests(tight_pair-testsuite EXTRA_ARGS --rng-seed ${RNG_SEED})
