--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: cpp
+dist: xenial
 
 addons:
   apt:
     sources:
-      - llvm-toolchain-trusty-5.0
+      - llvm-toolchain-xenial-5.0
       - ubuntu-toolchain-r-test
     packages:
       - clang-5.0
