--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -74,21 +74,46 @@ target_link_libraries(tight_pair-testsuite
 )
 
 # Somewhat speed up Catch2 compile times
-target_compile_definitions(tight_pair-testsuite PRIVATE CATCH_CONFIG_FAST_COMPILE)
-target_compile_definitions(tight_pair-testsuite PRIVATE CATCH_CONFIG_DISABLE_MATCHERS)
+target_compile_definitions(tight_pair-testsuite
+    PRIVATE
+        CATCH_CONFIG_FAST_COMPILE
+        CATCH_CONFIG_DISABLE_MATCHERS
+)
 
-# Use the gold linker if possible
+# General settings, mostly warnings
+target_compile_options(tight_pair-testsuite
+    PRIVATE
+        -Wall -Wextra -Wcast-align -Winline -Wmissing-declarations -Wmissing-include-dirs
+        -Wnon-virtual-dtor -Wodr -Wpedantic -Wredundant-decls -Wundef -Wunreachable-code
+        $<$<CXX_COMPILER_ID:GNU>:-Wlogical-op -Wuseless-cast -Wzero-as-null-pointer-constant>
+)
+
+# Settings depending on debug/release mode
+target_compile_options(tight_pair-testsuite
+    PRIVATE
+        $<$<AND:$<CONFIG:DEBUG>,$<CXX_COMPILER_ID:Clang>>:-O0>
+        $<$<AND:$<CONFIG:DEBUG>,$<CXX_COMPILER_ID:GNU>>:-Og>
+)
+
+# Use lld or the gold linker if possible
 if (UNIX AND NOT APPLE)
-    set_property(TARGET tight_pair-testsuite APPEND_STRING PROPERTY LINK_FLAGS " -fuse-ld=gold")
+    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set_property(TARGET tight_pair-testsuite APPEND_STRING PROPERTY LINK_FLAGS " -fuse-ld=lld")
+    else()
+        set_property(TARGET tight_pair-testsuite APPEND_STRING PROPERTY LINK_FLAGS " -fuse-ld=gold")
+    endif()
 endif()
 
 # Optionally enable sanitizers
 if (UNIX AND SANITIZE)
-	target_compile_options(tight_pair-testsuite PRIVATE -fsanitize=${SANITIZE})
-	set_property(TARGET tight_pair-testsuite APPEND_STRING PROPERTY LINK_FLAGS " -fsanitize=${SANITIZE}")
+    target_compile_options(tight_pair-testsuite PRIVATE -fsanitize=${SANITIZE})
+    set_property(
+        TARGET
+            tight_pair-testsuite
+        APPEND_STRING PROPERTY LINK_FLAGS
+            " -fsanitize=${SANITIZE} -fno-sanitize-recover=all"
+    )
 endif()
 
 include(CTest)
-
-string(RANDOM LENGTH 5 ALPHABET 0123456789 RNG_SEED)
-catch_discover_tests(tight_pair-testsuite EXTRA_ARGS --rng-seed ${RNG_SEED})
+catch_discover_tests(tight_pair-testsuite)
