Use alignas when an array is used for storage
This notably improves the comparison trick codegen on architectures such
as ARM or RISC-V.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,6 +58,7 @@ add_executable(
     tight_pair-testsuite
 
     main.cpp
+    alignment.cpp
     cppreference.cpp
     dr-811.cpp
     empty_base_get.cpp
