--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SANITIZE "" CACHE STRING "Comma-separated list of options to pass to -fsanit
 FetchContent_Declare(
     catch2
     GIT_REPOSITORY https://github.com/catchorg/Catch2
-    GIT_TAG master
+    GIT_TAG v2.13.6
 )
 
 FetchContent_GetProperties(catch2)
