--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -27,7 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         cxx:
-          - g++-5
+          - g++-7
           - clang++-6.0
         config:
           # Release build
@@ -42,6 +42,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install GCC
+        if: ${{matrix.cxx == 'g++-7'}}
+        run: sudo apt-get install -y g++-7
 
       - name: Install Clang
         if: ${{matrix.cxx == 'clang++-6.0'}}
