--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -64,7 +64,7 @@ jobs:
                 -DCMAKE_CONFIGURATION_TYPES=${{matrix.config.build_type}} \
                 -DCMAKE_BUILD_TYPE=${{matrix.config.build_type}} \
                 -DSANITIZE=${{matrix.config.sanitize}} \
-                -DUSE_VALGRIND=${{matrix.config.valgrind}} \
+                -DTIGHT_PAIR_USE_VALGRIND=${{matrix.config.valgrind}} \
                 -G"Unix Makefiles"
 
       - name: Build the test suite
