--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -111,8 +111,8 @@ endif()
 # Settings depending on debug/release mode
 target_compile_options(tight_pair-testsuite
     PRIVATE
-        $<$<AND:$<CONFIG:DEBUG>,$<CXX_COMPILER_ID:Clang>>:-O0>
-        $<$<AND:$<CONFIG:DEBUG>,$<CXX_COMPILER_ID:GNU>>:-Og>
+        $<$<AND:$<CONFIG:Debug>,$<CXX_COMPILER_ID:Clang>>:-O0>
+        $<$<AND:$<CONFIG:Debug>,$<CXX_COMPILER_ID:GNU>>:-Og>
 )
 
 # Use lld or the gold linker if possible
