Steal libc++ tests for P1951

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(
     libcxx/const_first_const_second.cpp
     libcxx/const_pair_U_V.cpp
     libcxx/copy_ctor.cpp
+    libcxx/ctor.brace-init.cpp
     libcxx/default.cpp
     libcxx/default_ctor.cpp
     libcxx/default-sfinae.cpp
